--- a/Sorting_algorithm.ipynb
+++ b/Sorting_algorithm.ipynb
@@ -16,7 +16,7 @@
       "id": "40e0a02f",
       "metadata": {
         "id": "40e0a02f",
-        "outputId": "922bebb6-57e9-448e-e034-875eb5fe86f8"
+        "outputId": "30938979-f7f5-4b2b-cedf-191163835919"
       },
       "outputs": [
         {
@@ -52,7 +52,7 @@
       "id": "f3e8103c",
       "metadata": {
         "id": "f3e8103c",
-        "outputId": "fd5114c2-c78f-47dc-f2b6-823f4f3810ce"
+        "outputId": "845560a3-b736-4d3d-f309-8b0d1e772cdf"
       },
       "outputs": [
         {
@@ -98,7 +98,7 @@
       "id": "870560f8",
       "metadata": {
         "id": "870560f8",
-        "outputId": "22c5edd0-6c42-454f-ee7c-a06272ec7eb8"
+        "outputId": "08b83603-9427-4596-b47f-edd094546a38"
       },
       "outputs": [
         {
@@ -182,7 +182,7 @@
       "id": "67f42ae1",
       "metadata": {
         "id": "67f42ae1",
-        "outputId": "d3078b24-7897-4f31-97fc-6dd1acdb89dd"
+        "outputId": "29226bac-fb53-452f-d2c3-338ea5fe0cfc"
       },
       "outputs": [
         {
@@ -263,7 +263,7 @@
       "id": "4b9246c9",
       "metadata": {
         "id": "4b9246c9",
-        "outputId": "04291282-d00f-400b-e9b9-38d4cd6ff4be"
+        "outputId": "c0f753a4-d973-417e-839b-d1134790242a"
       },
       "outputs": [
         {
@@ -311,7 +311,7 @@
       "id": "8b2b8ebb",
       "metadata": {
         "id": "8b2b8ebb",
-        "outputId": "b46d5e2f-4ca0-40ef-b401-997f7c59a7cc"
+        "outputId": "2f2226b4-a3e8-47ba-c324-e830c51d91ed"
       },
       "outputs": [
         {
@@ -366,7 +366,51 @@
       "execution_count": null,
       "id": "bcf989c6",
       "metadata": {
-        "id": "bcf989c6"
+        "id": "bcf989c6",
+        "outputId": "304f6942-01ff-4ba1-8816-8ce276483334"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "정렬되지 않은 배열: [6, 4, 3, 7, 5, 1, 9, 8, 2]\n",
+            "\n",
+            "셸 정렬 후 배열: [1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Implemetation to shell sort\n",
+        "\n",
+        "def shellSort(arr):\n",
+        "    n = len(arr)\n",
+        "    h = n // 2 # h개만큼 떨어져 있는 것을 구해야 함, 초깃값은 전체 배열의 절반값\n",
+        "    while h > 0:\n",
+        "        for i in range(h, n):\n",
+        "            j = i - h\n",
+        "            tmp = arr[i]\n",
+        "            while j >= 0 and arr[j] > tmp:\n",
+        "                arr[j + h] = arr[j]\n",
+        "                j -= h\n",
+        "            arr[j + h] = tmp\n",
+        "        h //= 2\n",
+        "    return arr\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    unsortedArr = [6, 4, 3, 7, 5, 1, 9, 8, 2]\n",
+        "    print(f'정렬되지 않은 배열: {unsortedArr}')\n",
+        "    print()\n",
+        "    sortedArr = shellSort(unsortedArr)\n",
+        "    print(f'셸 정렬 후 배열: {sortedArr}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "27401c0d",
+      "metadata": {
+        "id": "27401c0d"
       },
       "outputs": [],
       "source": []
