--- a/Sorting algorithm.ipynb
+++ b/Sorting algorithm.ipynb
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "27401c0d",
    "metadata": {},
    "outputs": [
@@ -386,34 +386,31 @@
      "text": [
       "Quick Sort\n",
       "배열 [35, 42, 16, 27, 89, 10, 99, 5, 63]에 대해 퀵 정렬을 수행\n",
-      "[35, 42, 16, 27, 89, 10, 99, 5, 63]\n",
-      "[35, 5, 16, 27, 89, 10, 99, 42, 63]\n",
-      "[35, 5, 16, 27, 10, 89, 99, 42, 63]\n",
-      "[10, 5, 16, 27, 35, 89, 99, 42, 63]\n",
-      "[5, 10, 16, 27, 35, 89, 99, 42, 63]\n",
-      "[5, 10, 16, 27, 35, 89, 99, 42, 63]\n",
-      "[5, 10, 16, 27, 35, 89, 99, 42, 63]\n",
-      "[5, 10, 16, 27, 35, 89, 63, 42, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
-      "[5, 10, 16, 27, 35, 42, 63, 89, 99]\n",
+      "arr[0] ~ arr[8]:  35 42 16 27 89 10 99 5 63\n",
+      "arr[0] ~ arr[3]:  10 5 16 27\n",
+      "arr[2] ~ arr[3]:  16 27\n",
+      "arr[0] ~ arr[1]:  5 10\n",
+      "arr[5] ~ arr[8]:  89 99 42 63\n",
+      "arr[0] ~ arr[6]:  5 10 16 27 35 42 63\n",
+      "arr[1] ~ arr[6]:  10 16 27 35 42 63\n",
+      "arr[2] ~ arr[6]:  16 27 35 42 63\n",
+      "arr[0] ~ arr[1]:  5 10\n",
+      "arr[3] ~ arr[6]:  27 35 42 63\n",
+      "arr[0] ~ arr[2]:  5 10 16\n",
+      "arr[1] ~ arr[2]:  10 16\n",
+      "arr[4] ~ arr[6]:  35 42 63\n",
+      "arr[0] ~ arr[3]:  5 10 16 27\n",
+      "arr[1] ~ arr[3]:  10 16 27\n",
+      "arr[2] ~ arr[3]:  16 27\n",
+      "arr[0] ~ arr[1]:  5 10\n",
+      "arr[5] ~ arr[6]:  42 63\n",
+      "arr[0] ~ arr[4]:  5 10 16 27 35\n",
+      "arr[1] ~ arr[4]:  10 16 27 35\n",
+      "arr[2] ~ arr[4]:  16 27 35\n",
+      "arr[0] ~ arr[1]:  5 10\n",
+      "arr[3] ~ arr[4]:  27 35\n",
+      "arr[0] ~ arr[2]:  5 10 16\n",
+      "arr[1] ~ arr[2]:  10 16\n",
       "정렬 결과: [5, 10, 16, 27, 35, 42, 63, 89, 99]\n"
      ]
     }
@@ -427,9 +424,8 @@
     "    pl = left+1 # left cursor\n",
     "    pr = right # right cursor\n",
     "    pivot = left\n",
-    "    \n",
+    "    print(f'arr[{left}] ~ arr[{right}]: ', *arr[left:right+1])   \n",
     "    while pl <= pr: # pl과 pr이 교차되면 탐색 종료\n",
-    "        print(f'{arr}')\n",
     "        while pl <= right and arr[pl] <= arr[pivot]:\n",
     "            pl += 1 # 배열의 시작부터 오른쪽으로 탐색하며 큰 값 찾기\n",
     "        while pr > left and arr[pr] >= arr[pivot]:\n",
