--- a/8-queen.ipynb
+++ b/8-queen.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c32ea015",
+   "execution_count": 4,
+   "id": "448927a7",
    "metadata": {},
    "outputs": [
     {
@@ -1689,9 +1689,9 @@
     "        print(f'index:{i, pos[i]}', end=' ') # i행 pos[i](=j)에 배치한 퀸의 위치를 출력\n",
     "        print()\n",
     "    \n",
-    "def show():  # 8 x 8의 matrix 형태로 퀸의 위치를 표시\n",
-    "    for j in range(8):\n",
-    "        for i in range(8):\n",
+    "def show(): # 8 x 8의 matrix 형태로 퀸의 위치를 표시\n",
+    "    for j in range(8): # j행\n",
+    "        for i in range(8): # i열\n",
     "            print('■' if pos[i] == j else '□', end='') # j행 i열에 퀸이 위치하면 ■, 없으면 □을 출력\n",
     "        print()\n",
     "    print()\n",
@@ -1720,7 +1720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "659696a1",
+   "id": "9365ebd8",
    "metadata": {},
    "outputs": [],
    "source": []
