Update n-Queen Prob

--- a/8-queen.ipynb
+++ b/8-queen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "448927a7",
    "metadata": {},
    "outputs": [
@@ -1697,7 +1697,7 @@
     "    print()\n",
     "\n",
     "def set(i):\n",
-    "    for j in range(8): # 8개의 행을 검색\n",
+    "    for j in range(8): # 8개의 열을 검색\n",
     "        if(not flag_a[j] # j행에 퀸이 배치되지 않았다면\n",
     "          and not flag_b[i + j] # 대각선 방향(↙↗)으로 퀸이 배치되지 않았다면 - j행 i열의 값은 i+j로 구할 수 있음\n",
     "          and not flag_c[i - j + 7]): # 대각선 방향(↖↘)으로 퀸이 배치되지 않았다면 - j행 i열의 값은 i-j+7으로 구할 수 있음\n",
@@ -1710,7 +1710,8 @@
     "                # 위 코드는 (j, i) 위치에 퀸을 배치할 때, 해당 행, 대각선 (↙↗), 대각선 (↖↘)에 퀸이 배치되었다는 표시\n",
     "                set(i + 1) # 다음 열(i + 1)에 대해 재귀적으로 퀸을 배치하기 위한 함수를 호출\n",
     "                # 위 코드는 열이 한 칸씩 증가하며 가능한 모든 퀸의 배치를 찾는 과정\n",
-    "                flag_a[j] = flag_b[i + j] = flag_c[i - j + 7] = False # 퀸이 배치되었던 행, 대각선 (↙↗), 대각선 (↖↘)의 표시를 다시 False로 변경\n",
+    "                flag_a[j] = flag_b[i + j] = flag_c[i - j + 7] = False\n",
+    "                # 퀸이 배치되었던 행, 대각선 (↙↗), 대각선 (↖↘)의 표시를 다시 False로 변경\n",
     "                # 위 코드는 해당 위치에서 다른 가능한 퀸의 배치를 찾기 위해 다시 되돌리는 역할\n",
     "                \n",
     "set(0)\n",
