--- a/Sorting algorithm.ipynb
+++ b/Sorting algorithm.ipynb
@@ -452,16 +452,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3bd5e5fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정렬되지 않은 배열: [9, 1, 3, 4, 6, 7, 8]\n",
+      "\n",
+      "패스 1\n",
+      " 9  1  3  4  6  7 - 8\n",
+      " 9  1  3  4  6 - 7  8\n",
+      " 9  1  3  4 - 6  7  8\n",
+      " 9  1  3 - 4  6  7  8\n",
+      " 9  1 - 3  4  6  7  8\n",
+      " 9 + 1  3  4  6  7  8\n",
+      "\n",
+      "패스 2\n",
+      " 1  9  3  4  6  7 - 8\n",
+      " 1  9  3  4  6 - 7  8\n",
+      " 1  9  3  4 - 6  7  8\n",
+      " 1  9  3 - 4  6  7  8\n",
+      " 1  9 + 3  4  6  7  8\n",
+      "\n",
+      "패스 3\n",
+      " 1  3  9  4  6  7 - 8\n",
+      " 1  3  9  4  6 - 7  8\n",
+      " 1  3  9  4 - 6  7  8\n",
+      " 1  3  9 + 4  6  7  8\n",
+      "\n",
+      "패스 4\n",
+      " 1  3  4  9  6  7 - 8\n",
+      " 1  3  4  9  6 - 7  8\n",
+      " 1  3  4  9 + 6  7  8\n",
+      "\n",
+      "패스 5\n",
+      " 1  3  4  6  9  7 - 8\n",
+      " 1  3  4  6  9 + 7  8\n",
+      "\n",
+      "패스 6\n",
+      " 1  3  4  6  7  9 + 8\n",
+      "\n",
+      "버블 정렬 후 배열: [1, 3, 4, 6, 7, 8, 9]\n",
+      "원솟값을 비교하는 횟수: 21\n",
+      "정렬을 위한 총 swap 횟수: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bubbleSort(arr):\n",
+    "    n = len(arr)\n",
+    "    cnt = 0\n",
+    "    cnt2 = 0\n",
+    "    for i in range(n-1): # 패스(pass)\n",
+    "        print(f'패스 {i+1}')\n",
+    "        for j in range(n-1, i, -1):\n",
+    "            for m in range(0, n-1):\n",
+    "                print(f'{arr[m]:2}' + (' ' if m != j-1 else\n",
+    "                                       ' +' if arr[j-1] > arr[j] else ' -'),\n",
+    "                      end='')\n",
+    "            print(f'{arr[n-1]:2}')\n",
+    "            cnt += 1\n",
+    "            if arr[j-1] > arr[j]:\n",
+    "                arr[j - 1], arr[j] = arr[j], arr[j-1] # swap\n",
+    "                cnt2 += 1\n",
+    "        print()\n",
+    "    return arr, cnt, cnt2\n",
+    "                \n",
+    "if __name__ == \"__main__\":\n",
+    "    unsortedArr = [9, 1, 3, 4, 6, 7, 8]\n",
+    "    print(f'정렬되지 않은 배열: {unsortedArr}')\n",
+    "    print()\n",
+    "    sortedArr = bubbleSort(unsortedArr)\n",
+    "    print(f'버블 정렬 후 배열: {sortedArr[0]}')\n",
+    "    print(f'원솟값을 비교하는 횟수: {sortedArr[1]}')\n",
+    "    print(f'정렬을 위한 총 swap 횟수: {sortedArr[2]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "bec95c55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정렬되지 않은 배열: [9, 1, 3, 4, 6, 7, 8]\n",
+      "\n",
+      "버블 정렬 후 배열: [1, 3, 4, 6, 7, 8, 9]\n",
+      "원솟값을 비교하는 횟수: 10\n",
+      "정렬을 위한 총 swap 횟수: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def shakerSort(arr):\n",
+    "    left = 0\n",
+    "    right = len(arr) - 1\n",
+    "    last = right\n",
+    "    \n",
+    "    cnt = 0\n",
+    "    cnt_2 = 0\n",
+    "    \n",
+    "    while left < right:\n",
+    "        for j in range(right, left, -1): # 정렬되지 않은 원솟값 중 최솟값 맨 앞에 fix\n",
+    "            if arr[j - 1] > arr[j]:\n",
+    "                arr[j - 1], arr[j] = arr[j], arr[j - 1]\n",
+    "                last = j\n",
+    "                cnt_2 += 1\n",
+    "        left = last\n",
+    "            \n",
+    "        for j in range(left, right): # 정렬되지 않은 원솟값 중 최댓값 맨 뒤에 fix\n",
+    "            if arr[j] > arr[j + 1]:\n",
+    "                arr[j], arr[j + 1] = arr[j + 1], arr[j]\n",
+    "                last = j\n",
+    "                cnt_2 += 1\n",
+    "        right = last\n",
+    "        \n",
+    "    cnt = left + right\n",
+    "    return arr, cnt, cnt_2\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    unsortedArr = [9, 1, 3, 4, 6, 7, 8]\n",
+    "    print(f'정렬되지 않은 배열: {unsortedArr}')\n",
+    "    print()\n",
+    "    sortedArr = shakerSort(unsortedArr)\n",
+    "    print(f'버블 정렬 후 배열: {sortedArr[0]}')\n",
+    "    print(f'원솟값을 비교하는 횟수: {sortedArr[1]}')\n",
+    "    print(f'정렬을 위한 총 swap 횟수: {sortedArr[2]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c845a4e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정렬되지 않은 배열: [23, 78, 45, 8, 32, 56]\n",
+      "\n",
+      "버블 정렬 후 배열: [8, 23, 32, 45, 56, 78]\n",
+      "원솟값을 비교하는 횟수: 6\n",
+      "정렬을 위한 총 swap 횟수: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def shakerSort(arr):\n",
+    "    left = 0\n",
+    "    right = len(arr) - 1\n",
+    "    last = right\n",
+    "    \n",
+    "    cnt = 0\n",
+    "    cnt_2 = 0\n",
+    "    \n",
+    "    while left < right:\n",
+    "        for j in range(right, left, -1): # 정렬되지 않은 원솟값 중 최솟값 맨 앞에 fix\n",
+    "            if arr[j - 1] > arr[j]:\n",
+    "                arr[j - 1], arr[j] = arr[j], arr[j - 1]\n",
+    "                last = j\n",
+    "                cnt_2 += 1\n",
+    "        left = last\n",
+    "            \n",
+    "        for j in range(left, right): # 정렬되지 않은 원솟값 중 최댓값 맨 뒤에 fix\n",
+    "            if arr[j] > arr[j + 1]:\n",
+    "                arr[j], arr[j + 1] = arr[j + 1], arr[j]\n",
+    "                last = j\n",
+    "                cnt_2 += 1\n",
+    "        right = last\n",
+    "        \n",
+    "    cnt = left + right\n",
+    "    return arr, cnt, cnt_2\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    unsortedArr = [23, 78, 45, 8, 32, 56]\n",
+    "    print(f'정렬되지 않은 배열: {unsortedArr}')\n",
+    "    print()\n",
+    "    sortedArr = shakerSort(unsortedArr)\n",
+    "    print(f'버블 정렬 후 배열: {sortedArr[0]}')\n",
+    "    print(f'원솟값을 비교하는 횟수: {sortedArr[1]}')\n",
+    "    print(f'정렬을 위한 총 swap 횟수: {sortedArr[2]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e56371d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정렬되지 않은 배열: [23, 78, 45, 8, 32, 56]\n",
+      "\n",
+      "패스 1\n",
+      "23 78 45  8 32 -56\n",
+      "23 78 45  8 -32 56\n",
+      "23 78 45 + 8 32 56\n",
+      "23 78 + 8 45 32 56\n",
+      "23 + 8 78 45 32 56\n",
+      "\n",
+      "패스 2\n",
+      " 8 23 78 45 32 -56\n",
+      " 8 23 78 45 +32 56\n",
+      " 8 23 78 +32 45 56\n",
+      " 8 23 -32 78 45 56\n",
+      "\n",
+      "패스 3\n",
+      " 8 23 32 78 45 -56\n",
+      " 8 23 32 78 +45 56\n",
+      " 8 23 32 -45 78 56\n",
+      "\n",
+      "패스 4\n",
+      " 8 23 32 45 78 +56\n",
+      " 8 23 32 45 -56 78\n",
+      "\n",
+      "패스 5\n",
+      " 8 23 32 45 56 -78\n",
+      "\n",
+      "버블 정렬 후 배열: [8, 23, 32, 45, 56, 78]\n",
+      "원솟값을 비교하는 횟수: 15\n",
+      "정렬을 위한 총 swap 횟수: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bubbleSort(arr):\n",
+    "    n = len(arr)\n",
+    "    cnt = 0\n",
+    "    cnt2 = 0\n",
+    "    for i in range(n-1): # 패스(pass)\n",
+    "        print(f'패스 {i+1}')\n",
+    "        for j in range(n-1, i, -1):\n",
+    "            for m in range(0, n-1):\n",
+    "                print(f'{arr[m]:2}' + (' ' if m != j-1 else\n",
+    "                                       ' +' if arr[j-1] > arr[j] else ' -'),\n",
+    "                      end='')\n",
+    "            print(f'{arr[n-1]:2}')\n",
+    "            cnt += 1\n",
+    "            if arr[j-1] > arr[j]:\n",
+    "                arr[j - 1], arr[j] = arr[j], arr[j-1] # swap\n",
+    "                cnt2 += 1\n",
+    "        print()\n",
+    "    return arr, cnt, cnt2\n",
+    "                \n",
+    "if __name__ == \"__main__\":\n",
+    "    unsortedArr = [23, 78, 45, 8, 32, 56]\n",
+    "    print(f'정렬되지 않은 배열: {unsortedArr}')\n",
+    "    print()\n",
+    "    sortedArr = bubbleSort(unsortedArr)\n",
+    "    print(f'버블 정렬 후 배열: {sortedArr[0]}')\n",
+    "    print(f'원솟값을 비교하는 횟수: {sortedArr[1]}')\n",
+    "    print(f'정렬을 위한 총 swap 횟수: {sortedArr[2]}')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bec95c55",
+   "id": "c7e4e242",
    "metadata": {},
    "outputs": [],
    "source": []
