--- a/Sorting algorithm.ipynb
+++ b/Sorting algorithm.ipynb
@@ -237,6 +237,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "eebbe9a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "셰이커 정렬을 수행합니다.\n",
+      "패스1\n",
+      " 9   1   3   4   6   7 - 8\n",
+      " 9   1   3   4   6 - 7   8\n",
+      " 9   1   3   4 - 6   7   8\n",
+      " 9   1   3 - 4   6   7   8\n",
+      " 9   1 - 3   4   6   7   8\n",
+      " 9 + 1   3   4   6   7   8\n",
+      " 1   9   3   4   6   7   8\n",
+      "패스 2\n",
+      " 1   9 + 3   4   6   7   8\n",
+      " 1   3   9 + 4   6   7   8\n",
+      " 1   3   4   9 + 6   7   8\n",
+      " 1   3   4   6   9 + 7   8\n",
+      " 1   3   4   6   7   9 + 8\n",
+      " 1   3   4   6   7   8   9\n",
+      "패스3\n",
+      " 1   3   4   6   7 - 8   9\n",
+      " 1   3   4   6 - 7   8   9\n",
+      " 1   3   4 - 6   7   8   9\n",
+      " 1   3 - 4   6   7   8   9\n",
+      " 1   3   4   6   7   8   9\n",
+      "비교를 15번 했습니다.\n",
+      "교환을 6번 했습니다.\n",
+      "오름차순으로 정렬했습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def shaker_sort_verbose(arr):\n",
+    "    \"\"\"\"셰이커 정렬(정렬 과정을 출력)\"\"\"\n",
+    "    ccnt = 0  # 비교 횟수\n",
+    "    scnt = 0  # 교환 횟수\n",
+    "    left = 0\n",
+    "    n = len(arr)\n",
+    "    right = len(arr) - 1\n",
+    "    last = right\n",
+    "    i = 0\n",
+    "    while left < right:\n",
+    "        print(f'패스{i + 1}')\n",
+    "        i += 1\n",
+    "        for j in range(right, left, -1):\n",
+    "            for m in range(0, n - 1):\n",
+    "               print(f'{arr[m]:2}' + ('  ' if m != j - 1 else\n",
+    "                                    ' +' if arr[j - 1] > arr[j] else ' -'),\n",
+    "                     end='')\n",
+    "            print(f'{arr[n - 1]:2}')\n",
+    "            ccnt += 1\n",
+    "            if arr[j - 1] > arr[j]:\n",
+    "                scnt += 1\n",
+    "                arr[j - 1], arr[j] = arr[j], arr[j - 1]\n",
+    "                last = j\n",
+    "        left = last\n",
+    "        for m in range(0, n - 1):\n",
+    "           print(f'{arr[m]:2}', end='  ')\n",
+    "        print(f'{arr[n - 1]:2}')\n",
+    "\n",
+    "        if (left == right):\n",
+    "             break\n",
+    "        print(f'패스 {i + 1}')\n",
+    "        i += 1\n",
+    "        for j in range(left, right):\n",
+    "            for m in range(0, n - 1):\n",
+    "               print(f'{arr[m]:2}' + ('  ' if m != j else\n",
+    "                                    ' +' if arr[j] > arr[j + 1] else ' -'),\n",
+    "                     end='')\n",
+    "            print(f'{arr[n - 1]:2}')\n",
+    "            ccnt += 1\n",
+    "            if arr[j] > arr[j + 1]:\n",
+    "                scnt += 1\n",
+    "                arr[j], arr[j + 1] = arr[j + 1], arr[j]\n",
+    "                last = j\n",
+    "        right = last\n",
+    "        for m in range(0, n - 1):\n",
+    "           print(f'{arr[m]:2}', end='  ')\n",
+    "        print(f'{arr[n - 1]:2}')\n",
+    "    print(f'비교를 {ccnt}번 했습니다.')\n",
+    "    print(f'교환을 {scnt}번 했습니다.')\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    print('셰이커 정렬을 수행합니다.')\n",
+    "\n",
+    "    arr = [9, 1, 3, 4, 6, 7 ,8]\n",
+    "\n",
+    "    shaker_sort_verbose(arr)  # 배열 x를 단순 교환 정렬\n",
+    "\n",
+    "    print('오름차순으로 정렬했습니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "id": "4b9246c9",
    "metadata": {},
