--- a/Sorting algorithm.ipynb
+++ b/Sorting algorithm.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "eebbe9a0",
    "metadata": {},
    "outputs": [
@@ -247,28 +247,28 @@
      "text": [
       "셰이커 정렬을 수행합니다.\n",
       "패스1\n",
-      " 9   1   3   4   6   7 - 8\n",
-      " 9   1   3   4   6 - 7   8\n",
-      " 9   1   3   4 - 6   7   8\n",
-      " 9   1   3 - 4   6   7   8\n",
-      " 9   1 - 3   4   6   7   8\n",
-      " 9 + 1   3   4   6   7   8\n",
-      " 1   9   3   4   6   7   8\n",
+      "23  78  45   8  32 -56\n",
+      "23  78  45   8 -32  56\n",
+      "23  78  45 + 8  32  56\n",
+      "23  78 + 8  45  32  56\n",
+      "23 + 8  78  45  32  56\n",
+      " 8  23  78  45  32  56\n",
       "패스 2\n",
-      " 1   9 + 3   4   6   7   8\n",
-      " 1   3   9 + 4   6   7   8\n",
-      " 1   3   4   9 + 6   7   8\n",
-      " 1   3   4   6   9 + 7   8\n",
-      " 1   3   4   6   7   9 + 8\n",
-      " 1   3   4   6   7   8   9\n",
+      " 8  23 -78  45  32  56\n",
+      " 8  23  78 +45  32  56\n",
+      " 8  23  45  78 +32  56\n",
+      " 8  23  45  32  78 +56\n",
+      " 8  23  45  32  56  78\n",
       "패스3\n",
-      " 1   3   4   6   7 - 8   9\n",
-      " 1   3   4   6 - 7   8   9\n",
-      " 1   3   4 - 6   7   8   9\n",
-      " 1   3 - 4   6   7   8   9\n",
-      " 1   3   4   6   7   8   9\n",
-      "비교를 15번 했습니다.\n",
-      "교환을 6번 했습니다.\n",
+      " 8  23  45  32 -56  78\n",
+      " 8  23  45 +32  56  78\n",
+      " 8  23 -32  45  56  78\n",
+      " 8  23  32  45  56  78\n",
+      "패스 4\n",
+      " 8  23  32  45 -56  78\n",
+      " 8  23  32  45  56  78\n",
+      "비교를 13번 했습니다.\n",
+      "교환을 7번 했습니다.\n",
       "오름차순으로 정렬했습니다.\n"
      ]
     }
@@ -327,7 +327,7 @@
     "if __name__ == '__main__':\n",
     "    print('셰이커 정렬을 수행합니다.')\n",
     "\n",
-    "    arr = [9, 1, 3, 4, 6, 7 ,8]\n",
+    "    arr = [23, 78, 45, 8, 32, 56]\n",
     "\n",
     "    shaker_sort_verbose(arr)  # 배열 x를 단순 교환 정렬\n",
     "\n",
